[gd_scene load_steps=21 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Models/humanoid_base.tscn" type="PackedScene" id=2]
[ext_resource path="res://Audio/Swipe.wav" type="AudioStream" id=3]
[ext_resource path="res://Audio/steps.wav" type="AudioStream" id=4]
[ext_resource path="res://Models/Skins/skin_adventurer.png" type="Texture2D" id=5]
[ext_resource path="res://Audio/jump.wav" type="AudioStream" id=6]
[ext_resource path="res://Images/crosshair.png" type="Texture2D" id=7]
[ext_resource path="res://UserInterface/Userinterface.tscn" type="PackedScene" id=8]

[sub_resource type="CapsuleShape3D" id=1]
radius = 0.5
height = 0.8

[sub_resource type="StandardMaterial3D" id=2]
flags_transparent = true
flags_unshaded = true
flags_do_not_receive_shadows = true
flags_disable_ambient_light = true
vertex_color_use_as_albedo = true
params_billboard_mode = 3
params_billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id=3]
material = SubResource( 2 )
size = Vector2( 0.01, 0.01 )

[sub_resource type="Curve" id=4]
max_value = 10.0
_data = [ Vector2( 0, 10 ), 0.0, -0.703258, 0, 0, Vector2( 0.531707, 1.18182 ), -3.34499, 0.0, 0, 0 ]

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=6]
offsets = PackedFloat32Array( 0, 0.483516, 0.835165, 1 )
colors = PackedColorArray( 0, 1, 0.929412, 1, 1, 0.74902, 0, 1, 0, 0.0627451, 1, 1, 1, 1, 1, 1 )

[sub_resource type="StandardMaterial3D" id=7]
albedo_texture = ExtResource( 5 )

[sub_resource type="BoxShape3D" id=8]
extents = Vector3( 0.779881, 0.180228, 0.536696 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.278431, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.686275, 0.627451, 0, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.34902, 0.32549, 0, 1 )

[node name="Player" type="CharacterBody3D"]
input_ray_pickable = false
collision_layer = 2
collision_mask = 45
script = ExtResource( 1 )

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.9, 0 )
shape = SubResource( 1 )

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 4, 0 )
visible = false
spot_range = 7.0

[node name="FireFlies" type="CPUParticles3D" parent="."]
transform = Transform3D( -1, 0, -8.7423e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1.8, -2.4 )
amount = 32
lifetime = 5.0
speed_scale = 0.2
randomness = 0.1
lifetime_randomness = 1.0
fract_delta = false
local_coords = false
mesh = SubResource( 3 )
emission_shape = 2
emission_box_extents = Vector3( 3, 3, 3 )
direction = Vector3( 0, 0, 1 )
spread = 90.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.1
angular_velocity = 1.0
angular_velocity_random = 0.25
linear_accel = 1.0
linear_accel_curve = SubResource( 4 )
radial_accel = 1.0
radial_accel_random = 0.1
scale_amount_curve = SubResource( 5 )
color_ramp = SubResource( 6 )

[node name="StepSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -30.0

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -5.0

[node name="SlashSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -5.0

[node name="Body" parent="." instance=ExtResource( 2 )]

[node name="Head" parent="Body" index="1"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.595, 0 )
material/0 = SubResource( 7 )

[node name="Camera3D" type="Camera3D" parent="Body/Head" index="1"]
transform = Transform3D( 0.999995, 0.000826059, -0.00308289, 0, 0.965926, 0.258819, 0.00319164, -0.258818, 0.965921, -0.0347386, 1.132, 2.7379 )
current = true
near = 0.01
far = 500.0

[node name="Torso" parent="Body" index="2"]
transform = Transform3D( 1.04125, 0, 0, 0, 1.04125, 0, 0, 0, 1.12375, 0, 1.03, 0 )
material/0 = SubResource( 7 )

[node name="ArmRight" parent="Body" index="3"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.225, 1.26, 0 )
material/0 = SubResource( 7 )

[node name="ArmLeft" parent="Body" index="4"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.225, 1.26, 0 )
material/0 = SubResource( 7 )

[node name="LegLeft" parent="Body" index="5"]
material/0 = SubResource( 7 )

[node name="LegRight" parent="Body" index="6"]
material/0 = SubResource( 7 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Attack_Area" type="Area3D" parent="."]
input_ray_pickable = false
collision_layer = 16
collision_mask = 12

[node name="CollisionShape3D" type="CollisionShape3D" parent="Attack_Area"]
transform = Transform3D( 0.82974, -0.558151, 0, 0.558151, 0.82974, 0, 0, 0, 1, 0, 1.03515, -0.632459 )
shape = SubResource( 8 )

[node name="Hud" parent="." instance=ExtResource( 8 )]

[node name="TextureRect" type="TextureRect" parent="Hud"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -2.0
offset_right = 4.0
offset_bottom = 2.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Life" type="ProgressBar" parent="Hud"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -583.0
offset_top = -72.0
offset_right = 583.0
offset_bottom = -47.0
custom_minimum_size = Vector2( 500, 25 )
theme_override_styles/fg = SubResource( 9 )
theme_override_styles/bg = SubResource( 10 )
value = 34.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stamina" type="ProgressBar" parent="Hud"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -583.0
offset_top = -41.8993
offset_right = 583.0
offset_bottom = -26.8993
custom_minimum_size = Vector2( 500, 15 )
theme_override_styles/fg = SubResource( 11 )
theme_override_styles/bg = SubResource( 12 )
value = 34.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="body_entered" from="Attack_Area" to="." method="_on_Attack_Area_body_entered"]
[connection signal="body_exited" from="Attack_Area" to="." method="_on_Attack_Area_body_exited"]

[editable path="Body"]
